0.12.100
        + EBox::Module::writeConfFile and EBox::Service scape fil'es path
0.12.99
	+ Add support for reporting
	+ Refresh logs automatically
	+ Reverse log order
0.12.3
	+ Bug fix: use the new API in purge method. Now purging logs is working
	again.
0.12.2
	+ Increase random string length used to generate the cookie to
	2048 bits
	+ Logs are show in inverse chronological order
0.12.1
	+ Bug fix: use unsafeParam for progress indicator or some i18 strings
	will fail when saving changes
0.12
	+ Bugfix: Don't assume timecol is 'timestamp' but defined by
	module developer. This allows to purge some logs tables again
	+ Add page titles to models
	+ Set default values when not given in `add` method in models
	+ Add method to manage page size in model
	+ Add hidden field to help with Ajax request and automated testing with
	  ANSTE
	+ Bugfix: cast sql types to filter fields in logs
	+ Bugfix: Restricted resources are back again to make RSS
	access policy work again
	+ Workaround bogus mason warnings
	+ Make postinst script less verbose
	+ Disable keepalive in eBox apache
	+ Do not run a startup script in eBox apache
	+ Set default purge time for logs stored in eBox db to 1 week
	+ Disable LogAdmin actions in `ebox-global-action` until LogAdmin
	feature is completely done
0.11.103
	+ Modify EBox::Types::HasMany to create directory based on its row 
	+ Add _setRelationship method to set up relationships between models
	  and submodels
	+ Use the new EBox::Model::Row api
	+ Add help method to EBox::Types::Abstract
	+ Decrease size for percentage value in disk free watcher
	+ Increase channel link field size in RSS dispatcher
0.11.102
	+ Bugfix: cmp in EBox::Types::HostIP now sorts correctly
	+ updatedRowNotify in EBox::Model::DataTable receives old row as
	well as the recently updated row
	+ Added `override_user_modification` configuration parameter to
	avoid user modification checkings and override them without asking